# lumai-1750210109144-gnkkz5

./: Anchor.toml  README.md  next.config.js  package.json  tailwind.config.js
app/: globals.css  layout.tsx  page.tsx
app/api/streams/: route.ts
app/components/: StreamAnalytics.tsx  StreamCard.tsx  StreamCreator.tsx  StreamDashboard.tsx  WithdrawModal.tsx
app/create/: page.tsx
app/dashboard/: page.tsx
app/hooks/: useStreamProgram.ts  useStreams.ts
app/lib/: anchor-client.ts  stream-utils.ts
app/stream/[id]/: page.tsx
app/types/: stream.ts
components/: WalletProvider.tsx
components/ui/: button.tsx  card.tsx  input.tsx  progress.tsx
programs/streamflow/: Cargo.toml
programs/streamflow/src/: error.rs  lib.rs
programs/streamflow/src/instructions/: cancel_stream.rs  create_stream.rs  withdraw.rs
programs/streamflow/src/state/: mod.rs  stream.rs
